--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "tree-sitter-cli": "^0.20.8",
+    "tree-sitter-typescript": "^0.20.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
