--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@octokit/rest": "^20.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-tree-sitter": "^0.20.8"
