chore: add vitest package

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tree-sitter-cli": "^0.20.8",
     "tree-sitter-typescript": "^0.20.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.6"
   }
 }
